Cleaned up css and fixed issue with footer and overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,11 +38,9 @@ nav {
 
 .main-container {
     clear: both;
-    overflow: auto;
     margin: 0;
-    height: 600px;
+    height: 815px;
     width: 100%;
-    border-bottom: 5px solid #4aaaa5;
 }
 
 h2 {
@@ -100,14 +98,14 @@ input, textarea {
     display: inline-block;
     width: 250px;
     height: 100px;
-    margin: 80px;
+    margin: 60px;
 }
 
 .portfolio-image {
     float: left;
-    top: -10px;
     width: 100%;
     bottom: 30px;
+    margin-top: -70px;
 }
 
 #bio-image {
@@ -158,7 +156,7 @@ input, textarea {
 }
 
 #portfolio {
-    height: 900px;
+    height: 750px;
     padding: 15px;
 }
 
@@ -169,10 +167,12 @@ footer {
     padding: 18px;
     height: 70px;
     background-color: #666666;
-    width: 100%;
+    width: 1200px;
     border-bottom: none;
     color: #ffffff;
     text-align: center;
+    border-top: 5px solid #4aaaa5;
+    position: absolute;
 }
 
 .clearfix {
